--- a/export-with-imgs.html
+++ b/export-with-imgs.html
@@ -14,9 +14,7 @@ body {
 .pre-title {
     font-size: 16px;
     font-weight: 600;
-    text-align: right;
     color: rgb(119, 119, 119);
-    position:absolute;
     /* margin: 24px 0px 0px;
     padding: 0px; */
 }
@@ -24,7 +22,6 @@ body {
 .bookTitle {
     font-size: 32px;
     font-weight: 700;
-    text-align: center;
     color: #2d1e0d;
     margin-top: 18px;
     margin-bottom: 5px;
@@ -32,9 +29,8 @@ body {
 }
 
 .post-title {
-    font-size: 12px;
+    font-size: 11px;
     font-weight: 600;
-    text-align: right;
     font-style: italic;
     color: rgb(119, 119, 119);
     /* margin: 24px 0px 0px;
@@ -118,10 +114,11 @@ hr {
 </head>
 <body>
 <div class='bodyContainer'>
-<h1><div class='notebookFor'>Notes and highlights for</div><div class='bookTitle'>The Psychology of Money.pdf
-</div><div class='authors'>
-
-</div></h1><hr/>
+<h1>
+<div class='pre-title'>Notes and highlights for</div>
+<div class='bookTitle'>The Psychology of Money.pdf</div>
+<div class='post-title'>Book by: Morgan Housel</div>
+</h1><hr/>
 
 <h2 class='sectionHeading'>Introduction: The Greatest Show On Earth</h2><h3 class='noteHeading'>Highlight (<span class='highlight_yellow'>yellow</span>) - Page 10</div><div class='noteText'>doing well with money has a little to do with how smart you are and a lot to do with how you behave. And behavior is hard to teach, even to really smart people.</h3>
 <h3 class='noteHeading'>Highlight (<span class='highlight_yellow'>yellow</span>) - Page 10</div><div class='noteText'>Ordinary folks with no financial education can be wealthy if they have a handful of behavioral skills that have nothing to do with formal measures of intelligence.</h3>
