--- a/export-imgs.html
+++ b/export-imgs.html
@@ -1,42 +1,36 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "XHTML1-s.dtd" >
+<html xmlns="http://www.w3.org/TR/1999/REC-html-in-xml" xml:lang="en" lang="en">
+
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
 <style>
-body {
-    font-family: 'Lato', sans-serif;
+.bodyContainer {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
     padding-left: 32px;
     padding-right: 32px;
 }
 
-.title-container {
-  position: relative;
-}
-
-.pre-title {
-    font-size: 16px;
-    font-weight: 600;
-    color: rgb(119, 119, 119);
-    /* margin: 24px 0px 0px;
-    padding: 0px; */
-}
-
-.bookTitle {
-    font-size: 26px;
+.notebookFor {
+    font-size: 18px;
     font-weight: 700;
-    color: #2d1e0d;
-    margin-top: 18px;
-    margin-bottom: 7px;
+    text-align: center;
+    color: rgb(119, 119, 119);
+    margin: 24px 0px 0px;
     padding: 0px;
 }
 
-.post-title {
-    font-size: 11px;
-    font-weight: 600;
-    font-style: italic;
-    color: rgb(119, 119, 119);
-    /* margin: 24px 0px 0px;
-    padding: 0px; */
+.bookTitle {
+    font-size: 32px;
+    font-weight: 700;
+    text-align: center;
+    color: #333333;
+    margin-top: 22px;
+    padding: 0px;
 }
-/* .authors {
+
+.authors {
     font-size: 13px;
     font-weight: 700;
     text-align: center;
@@ -44,10 +38,10 @@ body {
     margin-top: 22px;
     margin-bottom: 24px;
     padding: 0px;
-} */
+}
 
 .sectionHeading {
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 700;
     text-align: left;
     color: #333333;
@@ -65,7 +59,7 @@ body {
 }
 
 .noteText {
-    font-size: 17px;
+    font-size: 18px;
     font-weight: 500;
     text-align: left;
     color: #333333;
@@ -114,11 +108,10 @@ hr {
 </head>
 <body>
 <div class='bodyContainer'>
-<h1>
-<div class='pre-title'>Notes and highlights for</div>
-<div class='bookTitle'>The Psychology of Money.pdf</div>
-<div class='post-title'>Book by: Morgan Housel</div>
-</h1><hr/>
+<h1><div class='notebookFor'>Notes and highlights for</div><div class='bookTitle'>The Psychology of Money.pdf
+</div><div class='authors'>
+
+</div></h1><hr/>
 
 <h2 class='sectionHeading'>Introduction: The Greatest Show On Earth</h2><h3 class='noteHeading'>Highlight (<span class='highlight_yellow'>yellow</span>) - Page 10</div><div class='noteText'>doing well with money has a little to do with how smart you are and a lot to do with how you behave. And behavior is hard to teach, even to really smart people.</h3>
 <h3 class='noteHeading'>Highlight (<span class='highlight_yellow'>yellow</span>) - Page 10</div><div class='noteText'>Ordinary folks with no financial education can be wealthy if they have a handful of behavioral skills that have nothing to do with formal measures of intelligence.</h3>
@@ -127,7 +120,6 @@ hr {
 <h3 class='noteHeading'>Highlight (<span class='highlight_yellow'>yellow</span>) - Page 13</div><div class='noteText'>Two topics impact everyone, whether you are interested in them or not: health and money.</h3>
 <h3 class='noteHeading'>Highlight (<span class='highlight_yellow'>yellow</span>) - Page 14</div><div class='noteText'>The more I studied and wrote about the financial crisis, the more I realized that you could understand it better through the lenses of psychology and history, not finance.</h3>
 <h2 class='sectionHeading'>1. No One’s Crazy</h2><h3 class='noteHeading'>Highlight (<span class='highlight_yellow'>yellow</span>) - Page 17</div><div class='noteText'>Here’s the thing: People from different generations, raised by different parents who earned different incomes and held different values, in different parts of the world, born into different economies, experiencing different job markets with different incentives and different degrees of luck, learn very different lessons.</h3>
-<hr/>
 <h3 class='noteHeading'>Highlight (<span class='highlight_yellow'>yellow</span>) - Page 17</div><div class='noteText'>Everyone has their own unique experience with how the world works. And what you’ve experienced is more compelling than what you learn second-hand. So all of us—you, me, everyone—go through life anchored to a set of views about how money works that vary wildly from person to person. What seems crazy to you might make sense to me.</h3>
 <h3 class='noteHeading'>Highlight (<span class='highlight_yellow'>yellow</span>) - Page 17</div><div class='noteText'>Your personal experiences with money make up maybe 0.00000001% of what’s happened in the world, but maybe 80% of how you think the world works. So equally smart people can disagree about how and why recessions happen, how you should invest your money, what you should prioritize, how much risk you should take, and so on.</h3>
 <h3 class='noteHeading'>Highlight (<span class='highlight_yellow'>yellow</span>) - Page 18</div><div class='noteText'>The challenge for us is that no amount of studying or openmindedness can genuinely recreate the power of fear and uncertainty.</h3>
