--- a/export-with-imgs.html
+++ b/export-with-imgs.html
@@ -69,7 +69,7 @@ body {
     font-weight: 500;
     text-align: left;
     color: #333333;
-    margin: 2px 0px 0px;
+    margin: 2px 0px 10px 3px;
     padding: 0px;
 }
 
