--- a/export-imgs.html
+++ b/export-imgs.html
@@ -5,32 +5,43 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
 <style>
-.bodyContainer {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+body {
+    font-family: 'Lato', sans-serif;
     padding-left: 32px;
     padding-right: 32px;
 }
 
-.notebookFor {
-    font-size: 18px;
-    font-weight: 700;
-    text-align: center;
+.title-container {
+  position: relative;
+}
+
+.pre-title {
+    font-size: 16px;
+    font-weight: 600;
     color: rgb(119, 119, 119);
-    margin: 24px 0px 0px;
-    padding: 0px;
+    /* margin: 24px 0px 0px;
+    padding: 0px; */
 }
 
 .bookTitle {
-    font-size: 32px;
+    font-size: 26px;
     font-weight: 700;
-    text-align: center;
-    color: #333333;
-    margin-top: 22px;
+    color: #2d1e0d;
+    margin-top: 18px;
+    margin-bottom: 7px;
     padding: 0px;
 }
 
-.authors {
+.post-title {
+    font-size: 11px;
+    font-weight: 600;
+    font-style: italic;
+    color: rgb(119, 119, 119);
+    /* margin: 24px 0px 0px;
+    padding: 0px; */
+}
+
+/* .authors {
     font-size: 13px;
     font-weight: 700;
     text-align: center;
@@ -38,7 +49,7 @@
     margin-top: 22px;
     margin-bottom: 24px;
     padding: 0px;
-}
+} */
 
 .sectionHeading {
     font-size: 24px;
@@ -54,17 +65,18 @@
     font-weight: 700;
     text-align: left;
     color: #333333;
+    display:none;
     margin-top: 20px;
     padding: 0px;
 }
 
 .noteText {
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 500;
     text-align: left;
     color: #333333;
-    margin: 2px 0px 0px;
-    padding: 0px;
+    margin: 10px 0px 10px 0px;
+    padding: 0px 0px 0px 0px;
 }
 
 .highlight_blue {
@@ -108,9 +120,9 @@ hr {
 </head>
 <body>
 <div class='bodyContainer'>
-<h1><div class='notebookFor'>Notes and highlights for</div><div class='bookTitle'>The Psychology of Money.pdf
-</div><div class='authors'>
-
+<h1><div class='pre-title'>Notes and highlights for</div><div class='bookTitle'>The Psychology of Money.pdf
+</div><div class='post-title'>
+Book by: Morgan Housel
 </div></h1><hr/>
 
 <h2 class='sectionHeading'>Introduction: The Greatest Show On Earth</h2><h3 class='noteHeading'>Highlight (<span class='highlight_yellow'>yellow</span>) - Page 10</div><div class='noteText'>doing well with money has a little to do with how smart you are and a lot to do with how you behave. And behavior is hard to teach, even to really smart people.</h3>
