--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {
 } */
 
 .sectionHeading {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 700;
     text-align: left;
     color: #333333;
@@ -71,7 +71,7 @@ body {
     font-weight: 500;
     text-align: left;
     color: #333333;
-    margin: 10px 0px 10px 0px;
+    margin: 10px 0px 10px 10px;
     padding: 0px 0px 0px 0px;
 }
 
@@ -92,8 +92,7 @@ body {
 }
 
 .notebookGraphic {
-    margin-top: 10px;
-    text-align: left;
+    text-align: center;
 }
 
 .notebookGraphic img {
@@ -105,6 +104,7 @@ body {
     box-shadow:         0px 0px 5px #888;
     max-width: 100%;
     height: auto;
+    margin: 10px 0px 10px 0px;
 }
 
 hr {
