--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
     font-size: 20px;
     font-weight: 700;
     text-align: left;
-    color: #333333;
+    color: #1a4c64;
     margin-top: 24px;
     padding: 0px;
 }
@@ -70,7 +70,7 @@ body {
     font-size: 17px;
     font-weight: 500;
     text-align: left;
-    color: #333333;
+    color: #2d1e0d;
     margin: 10px 0px 10px 10px;
     padding: 0px 0px 0px 0px;
 }
