--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@ body {
     padding: 0px;
 }
 
-<!--invisible-->
 .noteHeading {
     font-size: 18px;
     font-weight: 700;
@@ -71,6 +70,8 @@ body {
     font-size: 17px;
     font-weight: 500;
     text-align: left;
+    letter-spacing: 0.3px;
+    line-height: 1.4;
     color: #2d1e0d;
     margin: 10px 0px 10px 10px;
     padding: 0px 0px 0px 0px;
