--- a/the-psychology-of-money.html
+++ b/the-psychology-of-money.html
@@ -5,6 +5,7 @@ body {
     font-family: 'Lato', sans-serif;
     padding-left: 32px;
     padding-right: 32px;
+    background: #f4f1ed;
 }
 
 .title-container {
